--- a/defs_ttt.ipynb
+++ b/defs_ttt.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#checks for winner in current game position\n",
     "def win_check(X0,winner):\n",
     "    if np.sum(np.sum(X0[:,:,0],axis =1)//3) ==1:\n",
     "        winner +=1\n",
@@ -38,7 +39,7 @@
     "\n",
     "    return winner\n",
     "    \n",
-    "\n",
+    "#used to update the search tree counts\n",
     "def update_N(row,path,pos):\n",
     "    if list(row.path) == path:\n",
     "        row.N += pos \n",
@@ -47,8 +48,7 @@
     "    return row\n",
     "    \n",
     "    \n",
-    "    \n",
-    "    \n",
+    "#used to update search tree scores  \n",
     "def update_W(row,path,pos,v):\n",
     "    if list(row.path) == path:\n",
     "        row.W += pos*v\n",
@@ -56,7 +56,8 @@
     "        pass\n",
     "\n",
     "    return row\n",
-    "    \n",
+    "\n",
+    "#this rollout starts with a fresh tree each rollout\n",
     "def rollout(X,mdl,num=30):\n",
     "    X_temp = copy.deepcopy(X)\n",
     "    \n",
@@ -149,13 +150,12 @@
     "                path_t = [0]*9 \n",
     "    return dF\n",
     "    \n",
-    "    \n",
+    "#this rollout keeps the previous rollout values and adds to them. used in final version \n",
     "def rollout2(X,mdl,df,num=30):\n",
     "    X_temp = copy.deepcopy(X)\n",
     "    \n",
     "    path_t = [0]*9\n",
     "\n",
-    "    #dF = pd.DataFrame({'path':[copy.deepcopy(path_t)],'N': [np.zeros((1,9),dtype = int)], 'W': [np.zeros((1,9))],'player':0,'roll':[1]})\n",
     "    dF = copy.deepcopy(df)\n",
     "    for i in range(num):\n",
     "\n",
@@ -231,6 +231,7 @@
     "                path_t = [0]*9 \n",
     "    return dF\n",
     "\n",
+    "#tests against a random player for 1000 games half player 1 half player 2\n",
     "def testing(mdl):\n",
     "    scores = np.zeros((3,1),dtype = int)\n",
     "    for Q in range(2):\n",
